--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
-  db:
+  bidb:
     platform: 'linux/amd64'
-    container_name: db
+    container_name: bidb
     build:
       context: ./docker
       dockerfile: mysql/Dockerfile
     volumes:
-      - db_data:/var/lib/mysql:cached
+      - db_data_bi:/var/lib/mysql:cached
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: happybeer
@@ -15,14 +15,35 @@ services:
       MYSQL_PASSWORD: happybeer
     ports:
       - "33060:3306"
-  metabase:
+  mbdb:
+    image: postgres:latest
+    container_name: mbdb
+    environment:
+      - POSTGRES_DB=mbdb
+      - POSTGRES_USER=staff
+      - POSTGRES_PASSWORD=happybeer
+    volumes:
+      - db_data_metabase:/var/lib/postgresql/data:cached
+    ports:
+      - 5432:5432
+    restart: always
+  mb:
     image: metabase/metabase:latest
-    container_name: metabase
+    container_name: mb
     ports:
       - 3000:3000
-    volumes:
-      - ./app/data:/mnt/data
+    environment:
+      - MB_DB_TYPE=postgres
+      - MB_DB_DBNAME=mbdb
+      - MB_DB_PORT=5432
+      - MB_DB_USER=staff
+      - MB_DB_PASS=happybeer
+      - MB_DB_HOST=mbdb
+    depends_on:
+      - mbdb
 
 volumes:
-  db_data:
+  db_data_bi:
+    driver: local
+  db_data_metabase:
     driver: local
